--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>Londra</title>
 </head>
 <body>
-    
+    <!-- header with title and three image's -->
+    <header>
+        <!-- Heading title -->
+        <h1>Il mio Viaggio a Londra</h1>
+        <!-- Image's of London -->
+        <img src="./img/pexels-bill-emrich-230794-0.jpg" alt="photo 1">
+        <img src="./img/pexels-bill-emrich-230794-1.jpg" alt="photo 2">
+        <img src="./img/pexels-bill-emrich-230794-2.jpg" alt="photo 3">
+        <hr>
+    </header>
 </body>
 </html>
