[UPDATE] Add main and section: "le mie spese"

--- a/index.html
+++ b/index.html
@@ -16,5 +16,48 @@
         <img src="./img/pexels-bill-emrich-230794-2.jpg" alt="photo 3">
         <hr>
     </header>
+    <!-- main whit 3 paragraphs -->
+    <main>
+        <!-- Section "Le mie spese" -->
+        <div>
+            <h2>Le mie spese</h2>
+            <table>
+                <!-- Head of table -->
+                <thead>
+                    <tr>
+                        <th>Numero</th>
+                        <th>Descrizione</th>
+                        <th>Costo</th>
+                    </tr>
+                </thead>
+                <!-- Body of table -->
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120&euro;</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120&euro;</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120&euro;</td>
+                    </tr>
+                </tbody>
+                <!-- footer of table -->
+                <tfoot>
+                    <tr>
+                        <td colspan="2">Totale</td>
+                        <td>360&euro;</td>
+                    </tr>
+                </tfoot>
+            </table>
+            <hr>
+        </div>
+    </main>
 </body>
 </html>
