[FIX] change div with section

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- main whit 3 paragraphs -->
     <main>
         <!-- Section "Le mie spese" -->
-        <div>
+        <section>
             <h2>Le mie spese</h2>
             <table>
                 <!-- Head of table -->
@@ -57,7 +57,7 @@
                 </tfoot>
             </table>
             <hr>
-        </div>
+        </section>
     </main>
 </body>
 </html>
